human-intervention-logs/io.projectreactor.tools:blockhound:1.0.8.RELEASE/gradle-test/gradle-test-2026-05-04T02-46-11-498941Z.log
> Task :tck-build-logic:extractPluginRequests UP-TO-DATE
> Task :tck-build-logic:generatePluginAdapters UP-TO-DATE
> Task :tck-build-logic:compileJava UP-TO-DATE
> Task :tck-build-logic:compileGroovy UP-TO-DATE
> Task :tck-build-logic:compileGroovyPlugins UP-TO-DATE
> Task :tck-build-logic:pluginDescriptors UP-TO-DATE
> Task :tck-build-logic:processResources UP-TO-DATE
> Task :tck-build-logic:classes UP-TO-DATE
> Task :tck-build-logic:jar UP-TO-DATE

> Configure project :
GraalVM Reachability Metadata TCK
---------------------------------

> Task :tckTest
====================
Testing library: io.projectreactor.tools:blockhound:1.0.8.RELEASE
Command: `/home/vjovanov/c/forge/forge8/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/4784-9075b16a/gradlew nativeTest`
Executing test...
-------
> Task :tck-build-logic:extractPluginRequests UP-TO-DATE
> Task :tck-build-logic:generatePluginAdapters UP-TO-DATE
> Task :tck-build-logic:compileJava UP-TO-DATE
> Task :tck-build-logic:compileGroovy UP-TO-DATE
> Task :tck-build-logic:compileGroovyPlugins UP-TO-DATE
> Task :tck-build-logic:pluginDescriptors UP-TO-DATE
> Task :tck-build-logic:processResources UP-TO-DATE
> Task :tck-build-logic:classes UP-TO-DATE
> Task :tck-build-logic:jar UP-TO-DATE
> Task :compileJava NO-SOURCE
> Task :processResources NO-SOURCE
> Task :classes UP-TO-DATE
> Task :jar UP-TO-DATE
> Task :checkTestTimeoutAnnotations
> Task :processTestResources NO-SOURCE
> Task :tck-test-support:compileJava UP-TO-DATE
> Task :tck-test-support:processResources NO-SOURCE
> Task :tck-test-support:classes UP-TO-DATE
> Task :tck-test-support:jar UP-TO-DATE
/home/vjovanov/c/forge/forge8/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/4784-9075b16a/tests/src/io.projectreactor.tools/blockhound/1.0.8.RELEASE/src/test/java/io_projectreactor_tools/blockhound/ClassInjectorInnerUsingReflectionInnerDispatcherInnerUsingUnsafeInjectionTest.java:248: error: cannot find symbol
> Task :compileTestJava FAILED

            String packageName = PACKAGE_PREFIX + "dispatcher" + Long.toUnsignedString(System.nanoTime());
                                                                                             ^
  symbol:   method nanoTime()
  location: interface System
Note: /home/vjovanov/c/forge/forge8/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/4784-9075b16a/tests/src/io.projectreactor.tools/blockhound/1.0.8.RELEASE/src/test/java/io_projectreactor_tools/blockhound/ClassInjectorInnerUsingReflectionInnerDispatcherInnerUsingUnsafeInjectionTest.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
1 error


[Incubating] Problems report is available at: file:///home/vjovanov/c/forge/forge8/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/4784-9075b16a/tests/src/io.projectreactor.tools/blockhound/1.0.8.RELEASE/build/reports/problems/problems-report.html
FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileTestJava'.
> Compilation failed; see the compiler output below.
  Note: /home/vjovanov/c/forge/forge8/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/4784-9075b16a/tests/src/io.projectreactor.tools/blockhound/1.0.8.RELEASE/src/test/java/io_projectreactor_tools/blockhound/ClassInjectorInnerUsingReflectionInnerDispatcherInnerUsingUnsafeInjectionTest.java uses or overrides a deprecated API.
  Note: Recompile with -Xlint:deprecation for details.
Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/9.1.0/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.
13 actionable tasks: 2 executed, 11 up-to-date

  /home/vjovanov/c/forge/forge8/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/4784-9075b16a/tests/src/io.projectreactor.tools/blockhound/1.0.8.RELEASE/src/test/java/io_projectreactor_tools/blockhound/ClassInjectorInnerUsingReflectionInnerDispatcherInnerUsingUnsafeInjectionTest.java:248: error: cannot find symbol
              String packageName = PACKAGE_PREFIX + "dispatcher" + Long.toUnsignedString(System.nanoTime());
                                                                                               ^
    symbol:   method nanoTime()
    location: interface System
  1 error

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to generate a Build Scan (Powered by Develocity).

BUILD FAILED in 2s

> Task :tckTest FAILED

[Incubating] Problems report is available at: file:///home/vjovanov/c/forge/forge8/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/4784-9075b16a/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':tckTest'.
> Test for io.projectreactor.tools:blockhound:1.0.8.RELEASE failed with exit code 1.

* Try:
> Run with --stacktrace option to get the stack trace.
> Run with --info or --debug option to get more log output.
> Run with --scan to generate a Build Scan (Powered by Develocity).
> Get more help at https://help.gradle.org.

Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/9.1.0/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 4s
9 actionable tasks: 1 executed, 8 up-to-date
